# sensors-description

./: .gitlab-ci.yml  CMakeLists.txt  package.xml
config/: ost.yaml
include/sensors_description/: MultiSenseSLPlugin.h
launch/: asus-realsense.launch  asus_xtion.launch  gmapping.launch  lidar_slam.launch  realsense-calib.launch  realsense-standalone.launch  realsense.launch  realsense2.launch  realsense_hyq_bench.launch  realsense_hyq_green.launch  realsense_hyq_real.launch  realsense_hyq_real_color.launch  rgbd_mapping.launch  rs_camera.launch  rs_multiple_devices.launch  rtabmapviz.launch  test.launch  test2.launch  testrealsense.old.launch  velodyne.launch
meshes/sensors/: lidar_support.dae
scripts/: enableVelodyne.sh  getVelodyneDiag.sh  getVelodyneInfo.sh  getVelodyneSettings.sh  getVelodyneSnapshot.json  setVelodyneFOV.sh  setVelodyneLaser.sh  setVelodyneRPM.sh  setVelodyneReturns.sh  startVelodyne.sh
src/: MultiSenseSLPlugin.cpp
urdfs/: common.xacro
urdfs/sensors/: asus_xtion.gazebo.xacro  asus_xtion.urdf.xacro  bumblebee.urdf.xacro  d435_camera.gazebo.urdf.xacro  d435_camera.urdf.xacro  d435_camera_openni.gazebo.urdf.xacro  hokuyo_laser.urdf.xacro  imu.gazebo.xacro  kinect.urdf.xacro  kvh_1775_imu.gazebo.xacro  kvh_1775_imu.urdf.xacro  microstrain_3dmgx325_imu.urdf.xacro  microstrain_3dmgx425_imu.urdf.xacro  multisense_sl.gazebo.xacro  multisense_sl.urdf.xacro  ptu_d46.urdf.xacro  realsense.gazebo.urdf.xacro  realsense.urdf.xacro  velodyne.urdf.xacro  vislab_3dve.urdf.xacro  vlp16.gazebo.urdf.xacro  vlp16.urdf.xacro  vlp16_and_support.urdf.xacro  vlp16_velodyne.gazebo.urdf.xacro  vlp16_velodyne.urdf.xacro
